<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_reg_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check_the_date_logo_alt1" />

    <EditText
        android:id="@+id/editText_reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/txt_reg_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextText_reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="159dp"
        android:text="@string/btn_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText_reg_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_reg_confirm_password" />

    <EditText
        android:id="@+id/editText_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/txt_reg_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editText_reg_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/editTextText_reg_email"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_reg_email" />

    <EditText
        android:id="@+id/editText_reg_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:hint="@string/txt_reg_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="@+id/editText_reg_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_reg_password" />

    <EditText
        android:id="@+id/editTextText_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText_reg_password"
        app:layout_constraintStart_toStartOf="@+id/editText_reg_username"
        app:layout_constraintTop_toBottomOf="@+id/editText_reg_username" />

</androidx.constraintlayout.widget.ConstraintLayout>