<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreenActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="340dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check_the_date_logo_alt1" />

    <TextView
        android:id="@+id/textView_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_welcome"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:onClick="logOut"
        android:text="@string/txt_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_shopping" />

    <Button
        android:id="@+id/button_main_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/btn_main_inventory"
        app:layout_constraintBottom_toTopOf="@+id/button_main_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_overview" />

    <Button
        android:id="@+id/button_main_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="27dp"
        android:text="@string/btn_main_shopping"
        app:layout_constraintBottom_toTopOf="@+id/textView_logout"
        app:layout_constraintStart_toStartOf="@+id/button_main_inventory"
        app:layout_constraintTop_toBottomOf="@+id/button_main_inventory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/button_main_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_success" />
</androidx.constraintlayout.widget.ConstraintLayout>