<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <EditText
        android:id="@+id/editTextText_Email_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/txt_email_reset"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
        app:layout_constraintStart_toStartOf="@+id/textView_reset"
        app:layout_constraintTop_toBottomOf="@+id/textView_reset" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="176dp"
        android:text="@string/btn_reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextText_Email_Reset"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_Email_Reset" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="340dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="171dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check_the_date_logo_alt1" />

    <TextView
        android:id="@+id/textView_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="34dp"
        android:text="@string/txt_reset_email"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextText_Email_Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

</androidx.constraintlayout.widget.ConstraintLayout>