<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingListAddItemActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="340dp"
        android:layout_height="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAddItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check_the_date_logo_alt1" />

    <TextView
        android:id="@+id/textViewAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="Add Item to Shopping List"
        app:layout_constraintBottom_toTopOf="@+id/editTextProductNameList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <EditText
        android:id="@+id/editTextProductNameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/edt_txt_product_name_list"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddItem" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/edt_txt_quantity"
        android:inputType="number|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/productTypeDropdownList"
        app:layout_constraintStart_toStartOf="@+id/editTextProductNameList"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductNameList" />

    <Spinner
        android:id="@+id/productTypeDropdownList"
        android:layout_width="257dp"
        android:layout_height="49dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddItemList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <Button
        android:id="@+id/buttonAddItemList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:text="@string/btn_add_item_list"
        app:layout_constraintBottom_toTopOf="@+id/textViewListBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTypeDropdownList" />

    <TextView
        android:id="@+id/textViewListBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="49dp"
        android:onClick="goBack"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddItemList" />
</androidx.constraintlayout.widget.ConstraintLayout>